GNOME Bugzilla – Bug 746168
[glshader] OSX crashes when trying to get vertex attribute without vertex shader
Last modified: 2015-03-13 17:42:16 UTC
Created attachment 299342 [details] [review] add_check_for_vertex_shader.patch GetAttribLocation should return -1 when there is no such attribute but it's crashing. Backtrace from glfiltersobel: frame #0: 0x000000010231faf1 libgstgl-1.0.0.dylib`gst_gl_shader_get_attribute_location(shader=0x0000000101080100, name=0x000000010233d54a) + 177 at gstglshader.c:1175 frame #1: 0x0000000102318991 libgstgl-1.0.0.dylib`_get_attributes(filter=0x00000001018040d0) + 81 at gstglfilter.c:1412 frame #2: 0x0000000102318911 libgstgl-1.0.0.dylib`gst_gl_filter_render_to_target_with_shader(filter=0x00000001018040d0, resize=1, input=8, target=3, shader=0x0000000101080100) + 49 at gstglfilter.c:1442 frame #3: 0x00000001004bd165 libgstopengl.so`gst_gl_filtersobel_filter_texture(filter=0x00000001018040d0, in_tex=8, out_tex=6) + 85 at gstglfiltersobel.c:234 frame #4: 0x000000010231845c libgstgl-1.0.0.dylib`gst_gl_filter_filter_texture(filter=0x00000001018040d0, inbuf=0x000000010108f0a0, outbuf=0x000000010108f1b0) + 972 at gstglfilter.c:1262 frame #5: 0x000000010231be0f libgstgl-1.0.0.dylib`gst_gl_filter_transform(bt=0x00000001018040d0, inbuf=0x000000010108f0a0, outbuf=0x000000010108f1b0) + 367 at gstglfilter.c:1309 Thanks to Matthew for catching the cause on first look.
Thanks! commit 40a4530c5d1ddb7625ccc9ee6e95e5c044db29f7 Author: Neos3452 <neos3452@gmail.com> Date: Fri Mar 13 17:04:17 2015 +0000 glshader: prevent from getting attributes without vertex shader It doesn't make sense to query for vertex attributes without a vertex shader. Moreover this is causing a crash on OSX. https://bugzilla.gnome.org/show_bug.cgi?id=746168